Update pom and readme